# better-num

./: Cargo.toml  README.md
examples/: english.rs  japanese.rs
src/: lib.rs
src/english/: i16.rs  i8.rs  mod.rs  u16.rs  u8.rs
src/japanese/: i16.rs  i8.rs  u16.rs  u8.rs
