[package]
name = "better-num"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Better numeric types in rust"
repository = "https://github.com/adryzz/better-num"
keywords = ["math", "type"]
categories = ["mathematics", "rust-patterns", "no-std", "no-std::no-alloc"]
readme = "README.md"

[dependencies]


[features]
default = ["english", "u8"]
u8 = []
i8 = []
u16 = []
i16 = []
english = []

[[example]]
name = "english"
